# AMSS-NCKU

./: .gitignore  AMSS_NCKU_Input.py  AMSS_NCKU_Program.py  LICENSE  README.md  cal_RMS.py  check.py  check_divergency.py  check_hy.py  compile.sh  input.par  makefile_and_run.py  profile.sh  profile1.sh  run.sh
AMSS_NCKU_source/: ABE.C  Ansorg.psid  Block.C  Block.h  Interp_Points_gpu.cu  Interp_Points_gpu.h  MPatch.C  MPatch.h  MPatch_gpu.cu  Parallel.C  Parallel.h  Parallel_GPU.cpp  TwoPunctureABE.C  TwoPunctures.C  bssn_gpu.cu  bssn_gpu.h  bssn_gpu_class.C  bssn_gpu_class.h  bssn_gpu_manager.cu  bssn_gpu_manager.h  bssn_gpu_rhs.cu  bssn_gpu_rhs.h  bssn_gpu_rhs_constant.cu  bssn_gpu_rhs_constant.h  bssn_gpu_rhs_ss.cu  bssn_rhs.f90  bssn_rhs.h  bssn_rhs_gpu.cu  bssn_rhs_gpu.cuh  bssn_rhs_gpu.h  bssn_step_gpu.C  cgh.C  cgh.h  checkpoint.C  derivatives.h  diff_new.f90  diff_new_gpu.cu  diff_new_gpu.cuh  enforce_algebra.cu  enforce_algebra.h  (+46 more)
kernel_benchmark/rhs_bssn/: CMakeLists.txt  benchmark.cu  diff_new_gpu.cu  fmisc_gpu.cu  kernel_optimized.cu  kernel_optimized1.cu  kernel_optimized_backup.cu  kernel_standard.cu  kodiss_gpu.cu  lopsidediff_gpu.cu  run.sh
kernel_benchmark/rhs_bssn/include/: fmisc.h  gpu_misc.cuh  lopsidediff.h
